--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="container-right">
             <h1>We Care</h1>
             <h2>About Your Pet</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nihil aut enim labore iste explicabo deleniti atque dicta eligendi numquam! Dicta illo quam iusto repellendus esse? Nobis nisi repellendus quis?</p>
+            <p>Lorem Fe ipsum dolor sit amet consectetur adipisicing elit. Quae nihil aut enim labore iste explicabo deleniti atque dicta eligendi numquam! Dicta illo quam iusto repellendus esse? Nobis nisi repellendus quis?</p>
             <button class="button-exlore">Exlore</button>
         </section>
     </main>
